--- a/stores/templates/stores/add_customer_profile.html
+++ b/stores/templates/stores/add_customer_profile.html
@@ -1,111 +1,123 @@
-{% extends 'basic.html' %}
 {% load static %}
 
 {% block content %}
-    <div class="instruction" style="text-align: center; margin-top: 15px;">
-        <h3>Complete Your Account First</h3>
-    </div>
-    <form action="" class="form-control" method="POST" enctype="multipart/form-data" style="width: 610px; margin-left: 170px; margin-top: 20px;">
-        {% csrf_token %}
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Beli In | Set up Profile</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    </head>
+    <body>
+        <div class="instruction" style="text-align: center; margin-top: 15px;">
+            <h3>Complete Your Account First</h3>
+        </div>
+        <form action="" class="form-control" method="POST" enctype="multipart/form-data" style="width: 710px; margin-left: 320px; margin-top: 20px;">
+            {% csrf_token %}
 
-        <div class="profile-information1" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
-            <label for="id_first_name" style="padding-bottom: 40px; flex-grow: 1;">Profile Picture:</label>
-            <div class="form1" style="width: 430px">
-                {{ profile_form.image }}
+            <div class="profile-information1" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                <label for="id_first_name" style="padding-bottom: 40px; flex-grow: 1;">Profile Picture:</label>
+                <div class="form1" style="width: 430px">
+                    {{ profile_form.image }}
+                </div>
             </div>
-        </div>
-        <div class="profile-information0" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
-            <label for="id_owner_id" style="padding-bottom: 40px; flex-grow: 1;">Owner Id:</label>
-            <div class="form0" style="width: 430px">
-                {{ profile_form.owner_id }}
+            <div class="profile-information0" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                <label for="id_owner_id" style="padding-bottom: 40px; flex-grow: 1;">Username:</label>
+                <div class="form0" style="width: 430px">
+                    {{ profile_form.owner_id }}
+                </div>
             </div>
-        </div>
-        <div class="profile-information2" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
-            <label for="id_first_name" style="padding-bottom: 40px; flex-grow: 1;">First Name:</label>
-            <div class="form2" style="width: 430px">
-                {{ profile_form.first_name }}
+            <div class="profile-information2" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                <label for="id_first_name" style="padding-bottom: 40px; flex-grow: 1;">First Name:</label>
+                <div class="form2" style="width: 430px">
+                    {{ profile_form.first_name }}
+                </div>
             </div>
-        </div>
-        <div class="profile-information3" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
-            <label for="id_last_name" style="padding-bottom: 40px; flex-grow: 1;">Last Name:</label>
-            <div class="form3" style="width: 430px">
-                {{ profile_form.last_name }}
+            <div class="profile-information3" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                <label for="id_last_name" style="padding-bottom: 40px; flex-grow: 1;">Last Name:</label>
+                <div class="form3" style="width: 430px">
+                    {{ profile_form.last_name }}
+                </div>
             </div>
-        </div>
-        <div class="profile-information4" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
-            <label for="id_email" style="flex-grow: 1; padding-bottom: 40px">Email:</label>
-            <div class="form4" style="width: 430px">
-                {{ profile_form.email }}
+            <div class="profile-information4" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <label for="id_email" style="flex-grow: 1; padding-bottom: 40px">Email:</label>
+                <div class="form4" style="width: 430px">
+                    {{ profile_form.email }}
+                </div>
             </div>
-        </div>
-        <div class="profile-information5" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
-            <label for="id_birthdate" style="flex-grow: 1; padding-bottom: 40px">Birthdate:</label>
-            <div class="form5" style="width: 430px; margin-left: 20px;">
-                {{ profile_form.birthdate }}
+            <div class="profile-information5" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <label for="id_birthdate" style="flex-grow: 1; padding-bottom: 40px">Birthdate:</label>
+                <div class="form5" style="width: 430px; margin-left: 20px;">
+                    {{ profile_form.birthdate }}
+                </div>
             </div>
-        </div>
-        <div class="profile-information6" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
-            <label for="id_phone_number" style="flex-grow: 1; padding-bottom: 40px">Phone Number:</label>
-            <div class="form6" style="width: 430px">
-                {{ profile_form.phone_number }}
+            <div class="profile-information6" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                <label for="id_phone_number" style="flex-grow: 1; padding-bottom: 40px">Phone Number:</label>
+                <div class="form6" style="width: 430px">
+                    {{ profile_form.phone_number }}
+                </div>
             </div>
-        </div>
-        <div class="profile-information7" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
-            <label for="id_country" style="flex-grow: 1; padding-bottom: 40px">Country:</label>
-            <div class="form7" style="width: 430px">
-                {{ profile_form.country }}
+            <div class="profile-information7" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                <label for="id_country" style="flex-grow: 1; padding-bottom: 40px">Country:</label>
+                <div class="form7" style="width: 430px">
+                    {{ profile_form.country }}
+                </div>
             </div>
-        </div>
-        <div class="profile-information8" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
-            <label for="id_province" style="flex-grow: 1; padding-bottom: 40px">Province:</label>
-            <div class="form8" style="width: 430px">
-                {{ profile_form.province }}
+            <div class="profile-information8" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                <label for="id_province" style="flex-grow: 1; padding-bottom: 40px">Province:</label>
+                <div class="form8" style="width: 430px">
+                    {{ profile_form.province }}
+                </div>
             </div>
-        </div>
-        <div class="profile-information9" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
-            <label for="id_city" style="flex-grow: 1; padding-bottom: 40px">City:</label>
-            <div class="form9" style="width: 430px">
-                {{ profile_form.city }}
+            <div class="profile-information9" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                <label for="id_city" style="flex-grow: 1; padding-bottom: 40px">City:</label>
+                <div class="form9" style="width: 430px">
+                    {{ profile_form.city }}
+                </div>
             </div>
-        </div>
-        <div class="profile-information10" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
-            <label for="id_district" style="flex-grow: 1; padding-bottom: 40px">District:</label>
-            <div class="form10" style="width: 430px">
-                {{ profile_form.district }}
+            <div class="profile-information10" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                <label for="id_district" style="flex-grow: 1; padding-bottom: 40px">District:</label>
+                <div class="form10" style="width: 430px">
+                    {{ profile_form.district }}
+                </div>
             </div>
-        </div>
-        <div class="profile-information11" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
-            <label for="id_postal_code" style="flex-grow: 1; padding-bottom: 40px">Postal Code:</label>
-            <div class="form11" style="width: 430px">
-                {{ profile_form.postal_code }}
+            <div class="profile-information11" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                <label for="id_postal_code" style="flex-grow: 1; padding-bottom: 40px">Postal Code:</label>
+                <div class="form11" style="width: 430px">
+                    {{ profile_form.postal_code }}
+                </div>
             </div>
-        </div>
-        <div class="profile-information12" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
-            <label for="id_street" style="flex-grow: 1; padding-bottom: 40px">Street Name:</label>
-            <div class="form12" style="width: 430px">
-                {{ profile_form.street }}
+            <div class="profile-information12" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">        
+                <label for="id_street" style="flex-grow: 1; padding-bottom: 40px">Street Name:</label>
+                <div class="form12" style="width: 430px">
+                    {{ profile_form.street }}
+                </div>
             </div>
-        </div>
-        <div class="profile-information13" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
-            <label for="id_gender" style="margin-right: 10px; padding-bottom: 40px; flex-grow: 1;">Gender:</label>
-            <div class="form13" style="width: 430px;">
-                {{ profile_form.gender }}
+            <div class="profile-information13" style="display: flex; align-items: flex-start; margin-left: 20px; margin-right: 10px;">
+                <label for="id_gender" style="margin-right: 10px; padding-bottom: 40px; flex-grow: 1;">Gender:</label>
+                <div class="form13" style="width: 430px;">
+                    {{ profile_form.gender }}
+                </div>
             </div>
-        </div>
-        <input type="submit" value="Submit" class="btn btn-success" style="margin-top: 40px; margin-left: 270px; margin-bottom: 40px;">
-    </form><br><br>
+            <input type="submit" value="Submit" class="btn btn-success" style="margin-top: 40px; margin-left: 270px; margin-bottom: 40px;">
+        </form><br><br>
 
 
-    <style>
-        .birthdate-select {
-            width: 110px;
-            height: 40px;
-            margin-right: 9px;
-            text-align: center;
-        }
+        <style>
+            .birthdate-select {
+                width: 110px;
+                height: 40px;
+                margin-right: 9px;
+                text-align: center;
+            }
 
-        .birthdate-select:hover {
-            border-color:  orange;
-        }
-    </style>
+            .birthdate-select:hover {
+                border-color:  orange;
+            }
+        </style>
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    </body>
+    </html>
 {% endblock %}
