--- a/stores/templates/stores/navbarStyle.html
+++ b/stores/templates/stores/navbarStyle.html
@@ -7,7 +7,7 @@
     <div class="container-fluid">
         {% if user.is_authenticated %}
             <a class="navbar-brand" href="{% url 'homepage' %}">
-                <img src="{% static 'images/logo-brand.jpg' %}" alt="logo" style="width: 40px; height: 40px;">
+                <img src="{% static 'images/logo-brand.jpg' %}" alt="logo" style="width: 40px; height: 40px; margin-left: 20px;">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -21,12 +21,12 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
                     {% if user.is_authenticated %}
-                        <a class="nav-link active" aria-current="page" href="{% url 'homepage' %}" style="color: white;">Home</a>
+                        <a class="nav-link active" aria-current="page" href="{% url 'homepage' %}" style="color: white; margin-left: -15px;">Beli-In</a>
                     {% endif %}
                 </li>
                 <li class="nav-item">
                     {% if user.is_authenticated %}
-                        <a class="nav-link" href="{% url 'add_product' %}" style="color: white;">Add Product</a>
+                        <a class="nav-link" href="{% url 'add_product' %}" style="color: white; margin-right: 145px;">Add Product</a>
                     {% endif %}
                 </li>
                 {% if user.is_authenticated %}
