--- a/stores/templates/stores/checkout_product.html
+++ b/stores/templates/stores/checkout_product.html
@@ -71,7 +71,10 @@
                             </div>
                         {% endfor %}
                     </div><br>
-                    <button id="pilihButton">Pilih</button>
+                    <div class="shippingOptions" style="margin-left: 600px;">
+                        <p>Opsi Pengiriman:</p>
+                        <button id="pilihButton" style="width: 66px; height: 30px; border-radius: 20%; background-color: rgb(112,52,87); color: white; margin-left: 20px;">Choose</button>
+                    </div>
 
                     <!-- Pop Up Form -->
                     <div id="popupForm" style="display: none;">
@@ -86,7 +89,7 @@
                                         <span>Rp.{{ delivery.formatted_price }}</span>
                                     </div>
                                     {% if delivery.delivery_type == 'Regular' %}
-                                        <div class="estimated" style="display: flex; margin-top: -10px;">
+                                        <div class="estimated" style="display: flex; margin-top: -10px; margin-left: 30px;">
                                             <p>Estimasi sampai:</p>
                                             <p style="font-weight: 500; word-spacing: -3px; font-size: smaller; margin-top: 3px; margin-left: 15px;">
                                                 {% for regular in estimated_time_regular %}
@@ -96,7 +99,7 @@
                                         </div>
                                     {% endif %}
                                     {% if delivery.delivery_type == 'Fast' %}
-                                        <div class="estimated" style="display: flex; margin-top: -10px;">
+                                        <div class="estimated" style="display: flex; margin-top: -10px; margin-left: 30px;">
                                             <p>Estimasi sampai:</p>
                                             <p style="font-weight: 500; word-spacing: -3px; font-size: smaller; margin-top: 3px; margin-left: 15px;">
                                                 {% for fast in estimated_time_fast %}
@@ -106,7 +109,7 @@
                                         </div>
                                     {% endif %}
                                     {% if delivery.delivery_type == 'Cargo' %}
-                                        <div class="estimated" style="display: flex; margin-top: -10px;">
+                                        <div class="estimated" style="display: flex; margin-top: -10px; margin-left: 30px;">
                                             <p>Estimasi sampai:</p>
                                             <p style="font-weight: 500; word-spacing: -3px; font-size: smaller; margin-top: 3px; margin-left: 15px;">
                                                 {% for cargo in estimated_time_cargo %}
@@ -117,8 +120,11 @@
                                     {% endif %}
                                 {% endfor %}
                             </div>
-                            <button type="button" id="saveButton">Save</button>
+                            <button type="button" id="saveButton" style="width: 58px; height: 30px; border-radius: 20%; background-color: rgb(112,52,87); color: white; margin-left: 140px;">Save</button>
                         </form>
+                    </div>
+                    <div id="showDelivery">
+
                     </div>
 
                 </div><br><br><br><br><br><br><br><br>
@@ -127,14 +133,57 @@
 
         <style>
             /* Choose Shipping Types Radio */
+            #popupForm {
+                margin-left: 600px;
+            }
+
             .chooseTypes {
                 margin-bottom: 10px;
+                margin-left: 30px;
             }
 
             .chooseTypes label {
                 display: inline-block;
                 width: 200px;
                 margin-right: 10px;
+            }
+
+            .showSelectedTypes {
+                display: flex;
+                flex-wrap: wrap;
+                align-items: flex-start;
+                margin-left: 650px;
+            }
+
+            .selectedValue {
+                display: block;
+                width: 250px;
+                margin-right: 10px;
+                margin-bottom: 10px;
+                margin-top: -50px;
+                font-weight: bold;
+            }
+
+            .formattedPrice {
+                display: block;
+                color: red;
+                margin-right: 30px;
+                margin-top: -50px;
+            }
+
+            .estimatedTime {
+                display: block;
+                margin-top: -48px;
+                margin-bottom: 10px;
+                margin-left: 10px;
+                font-weight: 500;
+                word-spacing: 0px;
+                font-size: smaller;
+                transform: translate(130px, 15px);
+            }
+
+            .estimated-Time {
+                transform: translate(-355px, -12px);
             }
         </style>
 
@@ -245,37 +294,96 @@
             document.getElementById('pilihButton').addEventListener('click', function() {
                 document.getElementById('popupForm').style.display = 'block';
                 document.getElementById('pilihButton').style.display = 'none';
+
+                // Hide delivery types when popupForm is displayed
+                document.querySelectorAll('.selectedValue, .formattedPrice, .estimatedTime, .estimated-Time').forEach(element => {
+                    element.style.display = 'none';
+                })
             });
 
             document.getElementById('saveButton').addEventListener('click', function() {
                 // Get the value of the selected radio options
-                let selectedValue = document.querySelector('input[name="delivery_type"]:checked').value;
+                // let selectedValue = document.querySelector('input[name="delivery_type"]:checked').value;
+                let selectedValue = document.querySelector('input[name="delivery_type"]:checked');
                 console.log('The selected option:', selectedValue)
+
+                let add = document.getElementById('showDelivery')
 
                 // Close pop up form
                 document.getElementById('popupForm').style.display = 'none';
                 document.getElementById('pilihButton').style.display = 'block';
 
+                // Get the estimated time based on the selected delivery_type
+                let estimatedTime;
+
                 // Show selected delivery option
-                if (selectedValue === 'Regular') {
+                if (selectedValue.value === 'Regular') {
                     console.log('yang dipilih:', selectedValue)
-                    document.getElementById('popupForm').style.display = 'block';
-                    
-                    document.getElementById('regularInfo').style.display = 'block';
-                    document.getElementById('fastInfo').style.display = 'none';
-                    document.getElementById('cargoInfo').style.display = 'none';
-                } else if (selectedValue === 'Fast') {
+                    let selected = document.querySelector('input[name="delivery_type"]:checked');
+                    console.log('The selected:', selected)
+                    // Get Formatted Price of the selected delivery type
+                    let formattedPrice = selectedValue.nextElementSibling.nextElementSibling.textContent;
+                    console.log('Formatted Price:', formattedPrice);
+                    // Get estimated time of the selected delivery_type
+                    estimatedTime = "{% for regular in estimated_time_regular %}{{ regular }}{% endfor %}";
+                    // Add to html / display on the web
+                    add.innerHTML = `<div class="selectedValue">${selected.value}</div> <div class="formattedPrice">${formattedPrice}</div> <div class="estimated-Time"> Estimated Time: </div> <div class="estimatedTime">${estimatedTime}</div>`;
+                    // Set the style
+                    add.classList.add('showSelectedTypes')
+                } else if (selectedValue.value === 'Fast') {
                     console.log('yang dipilih:', selectedValue)
-                    document.getElementById('regularInfo').style.display = 'none';
-                    document.getElementById('fastInfo').style.display = 'block';
-                    document.getElementById('cargoInfo').style.display = 'none';
-                } else if (selectedValue === 'Cargo') {
+                    let selected = document.querySelector('input[name="delivery_type"]:checked');
+                    console.log('The selected:', selected)
+                    // Get Formatted Price of the selected delivery type
+                    let formattedPrice = selectedValue.nextElementSibling.nextElementSibling.textContent;
+                    console.log('Formatted Price:', formattedPrice);
+                    // Get estimated time of the selected delivery_type
+                    estimatedTime = "{% for fast in estimated_time_fast %}{{ fast }}{% endfor %}";
+                    // Add to html / display on the web
+                    add.innerHTML = `<div class="selectedValue">${selected.value}</div> <span class="formattedPrice">${formattedPrice}</span> <div class="estimated-Time"> Estimated Time: </div> <div class="estimatedTime">${estimatedTime}</div>`;
+                    // Set the style
+                    add.classList.add('showSelectedTypes')
+                } else if (selectedValue.value === 'Cargo') {
                     console.log('yang dipilih:', selectedValue)
-                    document.getElementById('regularInfo').style.display = 'none';
-                    document.getElementById('fastInfo').style.display = 'none';
-                    document.getElementById('cargoInfo').style.display = 'block';
+                    let selected = document.querySelector('input[name="delivery_type"]:checked');
+                    console.log('The selected:', selected)
+                    // Get Formatted Price of the selected delivery type
+                    let formattedPrice = selectedValue.nextElementSibling.nextElementSibling.textContent;
+                    console.log('Formatted Price:', formattedPrice);
+                    // Get estimated time of the selected delivery_type
+                    estimatedTime = "{% for cargo in estimated_time_cargo %}{{ cargo }}{% endfor %}";
+                    // Add to html / display on the web
+                    add.innerHTML = `<div class="selectedValue">${selected.value}</div> <span class="formattedPrice">${formattedPrice}</span> <div class="estimated-Time"> Estimated Time: </div> <div class="estimatedTime">${estimatedTime}</div>`;
+                    // Set the style
+                    add.classList.add('showSelectedTypes')
                 }
             });
+
+            // Make the 'choose' button in a dynamic positions
+            document.addEventListener('DOMContentLoaded', function() {
+                let showDelivery = document.getElementById('showDelivery');
+                let pilihButton = document.getElementById('pilihButton');
+
+                // Function to check if the showDelivery div has content
+                function checkShowDeliveryContent() {
+                    if (showDelivery.innerHTML.trim().length > 0) {
+                        // If content exists, add margin-left to pilihButton
+                        pilihButton.style.transform = 'translate(150px, -20px)';
+                    } else {
+                        // If no content exists, reset margin-left to default value
+                        pilihButton.style.marginLeft = '20px';
+                    }
+                }
+
+                // Call the function initially
+                checkShowDeliveryContent();
+
+                // Listen for changes in the showDelivery div content
+                showDelivery.addEventListener('DOMSubtreeModified', function() {
+                    // Call the function whenever the content changes
+                    checkShowDeliveryContent();
+                })
+            })
 
         </script>
     </body>
